--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <title>BusMall Survey</title>
   </head>
   <body>
+    <link rel="stylesheet" href="survey.css">
     <h1>Hello World</h1>
     <section>
-      <p id="pic1"></p>
-      <p id=pic2></p>
-      <p id=pic3></p>
+      <p class="pics" id="pic1"></p>
+      <p class="pics" id=pic2></p>
+      <p class="pics" id=pic3></p>
     </section>
     <script type="text/javascript" src="survey.js"></script>
   </body>
