--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="survey.css">
     <h1>Hello World</h1>
     <section>
-      <p class="pics" id="pic1"></p>
-      <p class="pics" id=pic2></p>
-      <p class="pics" id=pic3></p>
+      <img class="pics" id="pic1" src=""/>
+      <img class="pics" id="pic2" src=""/>
+      <img class="pics" id="pic3" src=""/>
     </section>
     <script type="text/javascript" src="survey.js"></script>
   </body>
