more work on loop

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       <img class="pics" id="pic2" src=""/>
       <img class="pics" id="pic3" src=""/>
     </section>
+    <button type="button" name="Results">Results</button>
     <script type="text/javascript" src="survey.js"></script>
   </body>
 </html>
