--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="survey.css">
     <h1>Hello World</h1>
     <section>
-      <img class="pics" id="pic1" src=""/>
-      <img class="pics" id="pic2" src=""/>
-      <img class="pics" id="pic3" src=""/>
+      <img class="pics" id="pic1" src="" name""/>
+      <img class="pics" id="pic2" src="" name""/>
+      <img class="pics" id="pic3" src="" name""/>
     </section>
     <button type="button" name="Results">Results</button>
     <script type="text/javascript" src="survey.js"></script>
