fixed button toggle

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <img class="pics" id="pic2" src="" name""/>
       <img class="pics" id="pic3" src="" name""/>
     </section>
-    <button type="button" name="Results">Results</button>
+    <button type="button" id="results" name="Results" >Results</button>
     <script type="text/javascript" src="survey.js"></script>
   </body>
 </html>
