example code to be added

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       <img class="pics" id="pic3" src="" name""/>
     </section>
     <button type="button" id="results" name="Results" >Results</button>
+    <section id="resultTable"></section>
     <script type="text/javascript" src="survey.js"></script>
   </body>
 </html>
