--- a/index.html
+++ b/index.html
@@ -3,17 +3,23 @@
   <head>
     <meta charset="utf-8">
     <title>BusMall Survey</title>
+    <section id="wdyl">
+      <h1>Which do you like?</h1>
+    </section>
   </head>
   <body>
     <link rel="stylesheet" href="survey.css">
-    <h1>Hello World</h1>
     <section>
       <img class="pics" id="pic1" src="" name""/>
       <img class="pics" id="pic2" src="" name""/>
       <img class="pics" id="pic3" src="" name""/>
     </section>
-    <button type="button" id="results" name="Results" >Results</button>
+    <button type="button" id="reset" >Reset</button>
+    <section id='results'>
+   </section>
     <section id="resultTable"></section>
+    <canvas width="800" height="500" id='myChart'></canvas>
+    <script type='text/javascript' src="chart.js"></script>
     <script type="text/javascript" src="survey.js"></script>
   </body>
 </html>
